// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetails.ui should render 1`] = `
<React.Fragment>
  <SceneWrapper
    bodySplit={33.709859154929575}
  >
    <View
      style={
        Object {
          "backgroundColor": "#F4F5F6",
          "flex": 1,
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <ScrollViewMock>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "width": "100%",
            }
          }
        >
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "height": 101,
                  "justifyContent": "center",
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 2,
                  }
                }
              >
                Sender Name
              </FormattedText>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "thumb/nail/path",
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 20,
                      "height": 40,
                      "marginRight": 9,
                      "width": 40,
                    }
                  }
                />
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "fontSize": 22,
                    }
                  }
                >
                  Sender
                </FormattedText>
              </View>
            </View>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "#D9E3ED",
                "borderBottomWidth": 1,
                "height": 90,
                "justifyContent": "center",
                "padding": 18,
                "width": "100%",
              }
            }
          >
            <FormattedText
              style={
                Object {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 2,
                }
              }
            >
              Bitcoin Amount
            </FormattedText>
            <FormattedText
              style={
                Object {
                  "color": "#353535",
                  "fontSize": 22,
                }
              }
            >
              ₿ 
              0.00000123
              
            </FormattedText>
          </View>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "height": 90,
                  "justifyContent": "center",
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 2,
                  }
                }
              >
                Amount in iso:USD
              </FormattedText>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "fontSize": 22,
                    }
                  }
                >
                  $ 
                </FormattedText>
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "fontSize": 22,
                    }
                  }
                >
                  0.00
                </FormattedText>
              </View>
            </View>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "#D9E3ED",
                "borderBottomWidth": 1,
                "height": 90,
                "justifyContent": "center",
                "padding": 18,
                "width": "100%",
              }
            }
          >
            <FormattedText
              style={
                Object {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 2,
                }
              }
            >
              Amount at Current Price
            </FormattedText>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <FormattedText
                style={
                  Object {
                    "color": "#353535",
                    "fontSize": 22,
                  }
                }
              >
                $ 
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#353535",
                    "flex": 1,
                    "fontSize": 22,
                  }
                }
              >
                120.00
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#66EDA8",
                    "fontSize": 22,
                  }
                }
              >
                0
                %
              </FormattedText>
            </View>
          </View>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "height": 101,
                  "justifyContent": "center",
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 2,
                  }
                }
              >
                Category
              </FormattedText>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#A4C7DF",
                      "borderRadius": 3,
                      "marginVertical": 7,
                      "paddingHorizontal": 11,
                      "paddingVertical": 7,
                    }
                  }
                >
                  <FormattedText
                    style={
                      Object {
                        "color": "#0E4B75",
                        "fontSize": 20,
                      }
                    }
                  >
                    Income
                  </FormattedText>
                </View>
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "marginHorizontal": 16,
                      "marginVertical": 7,
                    }
                  }
                >
                  
                </FormattedText>
              </View>
            </View>
          </TouchableWithoutFeedback>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "minHeight": 101,
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 11,
                  }
                }
              >
                Notes
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#353535",
                    "fontSize": 20,
                  }
                }
              >
                
              </FormattedText>
            </View>
          </TouchableWithoutFeedback>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <FormattedText
              style={
                Object {
                  "color": "#0E4B75",
                  "fontSize": 20,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "marginVertical": 29,
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              View Advanced Transaction Data
            </FormattedText>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <View
            style={
              Object {
                "paddingBottom": 18,
                "paddingHorizontal": 11,
              }
            }
          >
            <PrimaryButton
              onPress={[Function]}
              style={
                Object {
                  "height": 67,
                }
              }
            >
              <Text>
                Save
              </Text>
            </PrimaryButton>
          </View>
        </View>
      </ScrollViewMock>
    </View>
  </SceneWrapper>
</React.Fragment>
`;

exports[`TransactionDetails.ui should render with negative nativeAmount and fiatAmount 1`] = `
<React.Fragment>
  <SceneWrapper
    bodySplit={33.709859154929575}
  >
    <View
      style={
        Object {
          "backgroundColor": "#F4F5F6",
          "flex": 1,
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <ScrollViewMock>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "width": "100%",
            }
          }
        >
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "height": 101,
                  "justifyContent": "center",
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 2,
                  }
                }
              >
                Recipient Name
              </FormattedText>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "thumb/nail/path",
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 20,
                      "height": 40,
                      "marginRight": 9,
                      "width": 40,
                    }
                  }
                />
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "fontSize": 22,
                    }
                  }
                >
                  Recipient
                </FormattedText>
              </View>
            </View>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "#D9E3ED",
                "borderBottomWidth": 1,
                "height": 90,
                "justifyContent": "center",
                "padding": 18,
                "width": "100%",
              }
            }
          >
            <FormattedText
              style={
                Object {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 2,
                }
              }
            >
              Bitcoin Amount
            </FormattedText>
            <FormattedText
              style={
                Object {
                  "color": "#353535",
                  "fontSize": 22,
                }
              }
            >
              ₿ 
              0.00000122
               (+ 0 fee)
            </FormattedText>
          </View>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "height": 90,
                  "justifyContent": "center",
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 2,
                  }
                }
              >
                Amount in iso:USD
              </FormattedText>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "fontSize": 22,
                    }
                  }
                >
                  $ 
                </FormattedText>
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "fontSize": 22,
                    }
                  }
                >
                  6392.93
                </FormattedText>
              </View>
            </View>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "#D9E3ED",
                "borderBottomWidth": 1,
                "height": 90,
                "justifyContent": "center",
                "padding": 18,
                "width": "100%",
              }
            }
          >
            <FormattedText
              style={
                Object {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 2,
                }
              }
            >
              Amount at Current Price
            </FormattedText>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <FormattedText
                style={
                  Object {
                    "color": "#353535",
                    "fontSize": 22,
                  }
                }
              >
                $ 
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#353535",
                    "flex": 1,
                    "fontSize": 22,
                  }
                }
              >
                120.00
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#E85466",
                    "fontSize": 22,
                  }
                }
              >
                - 98.12
                %
              </FormattedText>
            </View>
          </View>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "height": 101,
                  "justifyContent": "center",
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 2,
                  }
                }
              >
                Category
              </FormattedText>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#A4C7DF",
                      "borderRadius": 3,
                      "marginVertical": 7,
                      "paddingHorizontal": 11,
                      "paddingVertical": 7,
                    }
                  }
                >
                  <FormattedText
                    style={
                      Object {
                        "color": "#0E4B75",
                        "fontSize": 20,
                      }
                    }
                  >
                    Expense
                  </FormattedText>
                </View>
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "marginHorizontal": 16,
                      "marginVertical": 7,
                    }
                  }
                >
                  
                </FormattedText>
              </View>
            </View>
          </TouchableWithoutFeedback>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "minHeight": 101,
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 11,
                  }
                }
              >
                Notes
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#353535",
                    "fontSize": 20,
                  }
                }
              >
                
              </FormattedText>
            </View>
          </TouchableWithoutFeedback>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <FormattedText
              style={
                Object {
                  "color": "#0E4B75",
                  "fontSize": 20,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "marginVertical": 29,
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              View Advanced Transaction Data
            </FormattedText>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <View
            style={
              Object {
                "paddingBottom": 18,
                "paddingHorizontal": 11,
              }
            }
          >
            <PrimaryButton
              onPress={[Function]}
              style={
                Object {
                  "height": 67,
                }
              }
            >
              <Text>
                Save
              </Text>
            </PrimaryButton>
          </View>
        </View>
      </ScrollViewMock>
    </View>
  </SceneWrapper>
</React.Fragment>
`;

exports[`TransactionDetails.ui should render with tx date off by 1000x in future 1`] = `
<React.Fragment>
  <SceneWrapper
    bodySplit={33.709859154929575}
  >
    <View
      style={
        Object {
          "backgroundColor": "#F4F5F6",
          "flex": 1,
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <ScrollViewMock>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "width": "100%",
            }
          }
        >
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "height": 101,
                  "justifyContent": "center",
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 2,
                  }
                }
              >
                Sender Name
              </FormattedText>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "thumb/nail/path",
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 20,
                      "height": 40,
                      "marginRight": 9,
                      "width": 40,
                    }
                  }
                />
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "fontSize": 22,
                    }
                  }
                >
                  Sender
                </FormattedText>
              </View>
            </View>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "#D9E3ED",
                "borderBottomWidth": 1,
                "height": 90,
                "justifyContent": "center",
                "padding": 18,
                "width": "100%",
              }
            }
          >
            <FormattedText
              style={
                Object {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 2,
                }
              }
            >
              Bitcoin Amount
            </FormattedText>
            <FormattedText
              style={
                Object {
                  "color": "#353535",
                  "fontSize": 22,
                }
              }
            >
              ₿ 
              0.00000123
              
            </FormattedText>
          </View>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "height": 90,
                  "justifyContent": "center",
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 2,
                  }
                }
              >
                Amount in iso:USD
              </FormattedText>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "fontSize": 22,
                    }
                  }
                >
                  $ 
                </FormattedText>
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "fontSize": 22,
                    }
                  }
                >
                  0.00
                </FormattedText>
              </View>
            </View>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "#D9E3ED",
                "borderBottomWidth": 1,
                "height": 90,
                "justifyContent": "center",
                "padding": 18,
                "width": "100%",
              }
            }
          >
            <FormattedText
              style={
                Object {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 2,
                }
              }
            >
              Amount at Current Price
            </FormattedText>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <FormattedText
                style={
                  Object {
                    "color": "#353535",
                    "fontSize": 22,
                  }
                }
              >
                $ 
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#353535",
                    "flex": 1,
                    "fontSize": 22,
                  }
                }
              >
                120.00
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#66EDA8",
                    "fontSize": 22,
                  }
                }
              >
                0
                %
              </FormattedText>
            </View>
          </View>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "height": 101,
                  "justifyContent": "center",
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 2,
                  }
                }
              >
                Category
              </FormattedText>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#A4C7DF",
                      "borderRadius": 3,
                      "marginVertical": 7,
                      "paddingHorizontal": 11,
                      "paddingVertical": 7,
                    }
                  }
                >
                  <FormattedText
                    style={
                      Object {
                        "color": "#0E4B75",
                        "fontSize": 20,
                      }
                    }
                  >
                    Income
                  </FormattedText>
                </View>
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "marginHorizontal": 16,
                      "marginVertical": 7,
                    }
                  }
                >
                  
                </FormattedText>
              </View>
            </View>
          </TouchableWithoutFeedback>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "minHeight": 101,
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 11,
                  }
                }
              >
                Notes
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#353535",
                    "fontSize": 20,
                  }
                }
              >
                
              </FormattedText>
            </View>
          </TouchableWithoutFeedback>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <FormattedText
              style={
                Object {
                  "color": "#0E4B75",
                  "fontSize": 20,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "marginVertical": 29,
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              View Advanced Transaction Data
            </FormattedText>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <View
            style={
              Object {
                "paddingBottom": 18,
                "paddingHorizontal": 11,
              }
            }
          >
            <PrimaryButton
              onPress={[Function]}
              style={
                Object {
                  "height": 67,
                }
              }
            >
              <Text>
                Save
              </Text>
            </PrimaryButton>
          </View>
        </View>
      </ScrollViewMock>
    </View>
  </SceneWrapper>
</React.Fragment>
`;

exports[`TransactionDetails.ui should render with tx date off by 1000x in past 1`] = `
<React.Fragment>
  <SceneWrapper
    bodySplit={33.709859154929575}
  >
    <View
      style={
        Object {
          "backgroundColor": "#F4F5F6",
          "flex": 1,
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <ScrollViewMock>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "width": "100%",
            }
          }
        >
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "height": 101,
                  "justifyContent": "center",
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 2,
                  }
                }
              >
                Sender Name
              </FormattedText>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "thumb/nail/path",
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 20,
                      "height": 40,
                      "marginRight": 9,
                      "width": 40,
                    }
                  }
                />
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "fontSize": 22,
                    }
                  }
                >
                  Sender
                </FormattedText>
              </View>
            </View>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "#D9E3ED",
                "borderBottomWidth": 1,
                "height": 90,
                "justifyContent": "center",
                "padding": 18,
                "width": "100%",
              }
            }
          >
            <FormattedText
              style={
                Object {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 2,
                }
              }
            >
              Bitcoin Amount
            </FormattedText>
            <FormattedText
              style={
                Object {
                  "color": "#353535",
                  "fontSize": 22,
                }
              }
            >
              ₿ 
              0.00000123
              
            </FormattedText>
          </View>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "height": 90,
                  "justifyContent": "center",
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 2,
                  }
                }
              >
                Amount in iso:USD
              </FormattedText>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "fontSize": 22,
                    }
                  }
                >
                  $ 
                </FormattedText>
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "fontSize": 22,
                    }
                  }
                >
                  0.00
                </FormattedText>
              </View>
            </View>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "#D9E3ED",
                "borderBottomWidth": 1,
                "height": 90,
                "justifyContent": "center",
                "padding": 18,
                "width": "100%",
              }
            }
          >
            <FormattedText
              style={
                Object {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 2,
                }
              }
            >
              Amount at Current Price
            </FormattedText>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <FormattedText
                style={
                  Object {
                    "color": "#353535",
                    "fontSize": 22,
                  }
                }
              >
                $ 
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#353535",
                    "flex": 1,
                    "fontSize": 22,
                  }
                }
              >
                120.00
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#66EDA8",
                    "fontSize": 22,
                  }
                }
              >
                0
                %
              </FormattedText>
            </View>
          </View>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "height": 101,
                  "justifyContent": "center",
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 2,
                  }
                }
              >
                Category
              </FormattedText>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#A4C7DF",
                      "borderRadius": 3,
                      "marginVertical": 7,
                      "paddingHorizontal": 11,
                      "paddingVertical": 7,
                    }
                  }
                >
                  <FormattedText
                    style={
                      Object {
                        "color": "#0E4B75",
                        "fontSize": 20,
                      }
                    }
                  >
                    Income
                  </FormattedText>
                </View>
                <FormattedText
                  style={
                    Object {
                      "color": "#353535",
                      "marginHorizontal": 16,
                      "marginVertical": 7,
                    }
                  }
                >
                  
                </FormattedText>
              </View>
            </View>
          </TouchableWithoutFeedback>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#D9E3ED",
                  "borderBottomWidth": 1,
                  "minHeight": 101,
                  "padding": 18,
                  "width": "100%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/images/transaction_details_icon.png",
                  }
                }
                style={
                  Object {
                    "height": 16,
                    "position": "absolute",
                    "right": 10,
                    "top": 10,
                    "width": 16,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 16,
                    "marginBottom": 11,
                  }
                }
              >
                Notes
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#353535",
                    "fontSize": 20,
                  }
                }
              >
                
              </FormattedText>
            </View>
          </TouchableWithoutFeedback>
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <FormattedText
              style={
                Object {
                  "color": "#0E4B75",
                  "fontSize": 20,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "marginVertical": 29,
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              View Advanced Transaction Data
            </FormattedText>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <View
            style={
              Object {
                "paddingBottom": 18,
                "paddingHorizontal": 11,
              }
            }
          >
            <PrimaryButton
              onPress={[Function]}
              style={
                Object {
                  "height": 67,
                }
              }
            >
              <Text>
                Save
              </Text>
            </PrimaryButton>
          </View>
        </View>
      </ScrollViewMock>
    </View>
  </SceneWrapper>
</React.Fragment>
`;
